<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.asiamvl.lightnote.MainActivity">


    <android.support.v7.widget.Toolbar
        style="@style/HeaderBar"
        app:theme="@style/ActionBarThemeOverlay"
        app:popupTheme="@style/ActionBarPopupThemeOverlay"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize" />

    <EditText
        android:id="@+id/etInput"
        android:layout_width="match_parent"
        android:maxLength="400"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/enter_your_text"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/save" />

        <Button
            android:id="@+id/bLock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/lock" />
    </LinearLayout>


</LinearLayout>
